// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders if content and contact are passed in 1`] = `
<form
  class="sc-bczRLJ capNoS"
  data-testid="Mobile"
>
  <div>
    <h2
      class="sc-jSMfEi hlwoBT"
    >
      test title
    </h2>
    <p>
      test description
    </p>
    <div />
    <input
      class="sc-ftvSup byvgcr"
      data-testid="Submit"
      disabled=""
      type="submit"
      value="SUBMIT"
    />
    <div
      class="sc-jqUVSM jdMkJN"
    >
      <a
        class="sc-kDDrLX jlPwAQ"
        data-testid="Links"
        href="https://www.github.com/jcpalmer108/"
      >
        <img
          alt="Github"
          class="sc-crXcEl lbtbww"
          src="[object Object]"
        />
      </a>
      <a
        class="sc-kDDrLX jlPwAQ"
        data-testid="Links"
        href="https://leetcode.com/darthToaster/"
      >
        <img
          alt="Leetcode"
          class="sc-crXcEl lbtbww"
          src="[object Object]"
        />
      </a>
    </div>
  </div>
</form>
`;

exports[`Contact renders if content and contact are passed in 2`] = `
<form
  class="sc-gsnTZi kdzYlD"
  data-testid="NotMobile"
>
  <div
    class="sc-dkzDqf dGOnnx"
  >
    <div
      class="sc-gKXOVf cuiuTf"
    >
      <div>
        <div
          class="sc-eCYdqJ UUQIc"
        >
          <h2
            class="sc-jSMfEi hlwoBT"
            data-testid="Title"
          >
            test title
          </h2>
          <p
            data-testid="Description"
          >
            test description
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds hGgFJv"
    >
      <div
        class="sc-hKMtZM jFrahT"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class="sc-papXJ qFTLl"
  >
    <div
      class="sc-jqUVSM jdMkJN"
      data-testid="Socials"
    >
      <a
        class="sc-kDDrLX jlPwAQ"
        href="https://www.github.com/jcpalmer108/"
      >
        <img
          alt="Github"
          class="sc-crXcEl lbtbww"
          id="icon"
          src="[object Object]"
        />
      </a>
      <a
        class="sc-kDDrLX jlPwAQ"
        href="https://leetcode.com/darthToaster/"
      >
        <img
          alt="Leetcode"
          class="sc-crXcEl lbtbww"
          id="icon"
          src="[object Object]"
        />
      </a>
    </div>
    <input
      class="sc-ftvSup byvgcr"
      data-testid="Submit"
      disabled=""
      type="submit"
      value="SUBMIT"
    />
  </div>
</form>
`;

exports[`Contact renders if content and contact are passed in 3`] = `
<div
  class="sc-iqcoie jyPsbp"
  data-testid="BlankSection"
/>
`;
